@@ -1,4 +1,6 @@
 Version 1.0.0 (not yet released):
+- net.c, tls.c: allow all network operations to be interrupted with CTRL+C,
+  and print an appropriate error message in this case.
 - tls.c: if an error occurs, clean up *after* building the error message. This
   fixes a potential segfault in the OpenSSL version of tls_start().
 - net_open_socket(): don't let net_close_socket() clobber errno.
